tests/errors/empty_circuit.nm
abstract component AbstractComponent {
    pin A: passive = 1;
}

abstract component Main {
    net TEST;

    AbstractComponent {
        A: TEST;
    }
}